# brownkit

./: .devenv.flake.nix  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  TRANSITION_SPEC.md  complexity-justification.md  coverage.json  devenv.nix  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/commands/: brownkit.assess.md  brownkit.graduate.md  brownkit.migrate.md  brownkit.monitor.md  brownkit.plan.md  brownkit.remediate.md  brownkit.validate.md
.claude/sessions/: 2025-10-21-final-completion.md  2025-10-21-optional-tasks-completion.md  2025-10-21-test-infrastructure-complete.md  2025-10-22-critical-fixes-completion.md  2025-10-22-critical-issues-implementation-plan.md  2025-10-22-dual-interface-implementation.md
.devenv.HaAyMU/: nix-eval-cache.db-shm  nix-eval-cache.db-wal
.github/workflows/: lint.yml  release.yml  test.yml
.specify/memory/: constitution.md  state.backup_20251025_215211.json  state.backup_20251026_193107.json  structure-moves.sh  structure-plan.md  structure-verification.md
.specify/scripts/bash/: brownfield-common.sh
docs/: GITHUB_SETUP.md  GITHUB_WORKFLOW.md  QUICK_START_GITHUB.md  TRANSITION_SPEC.md  conf.py  environment-variables.md  implementation-validation.md  index.rst
docs/api/: assessment.rst  cli.rst  index.rst  models.rst  orchestrator.rst  plugins.rst  remediation.rst  state.rst
docs/archive/: PHASE4_REFACTOR_STATUS.md
examples/: README.md
examples/basic-python/: README.md
examples/basic-python/before/: calc.py
examples/ci-integration/: README.md
scripts/: run_tests.sh  update-deps.sh
specs/001-brownfield-kit-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-brownfield-kit-implementation/checklists/: requirements.md
specs/001-brownfield-kit-implementation/contracts/: cli-commands.md  plugin-interface.md  state-schema.json
specs/002-brownfield-kit-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-brownfield-kit-spec/checklists/: requirements.md
specs/002-brownfield-kit-spec/contracts/: checkpoint.schema.json  config.schema.json  metrics.schema.json  phase-result.schema.json  project.schema.json  quality-gate.schema.json
src/brownfield/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/brownfield/assessment/: language_detector.py  metrics_collector.py  report_generator.py  tech_debt_analyzer.py
src/brownfield/cli/: __init__.py  assess.py  commands.py  graduate.py  install.py  quality.py  resume.py  status.py  structure.py  testing.py  validate.py
src/brownfield/cli/slash/: __init__.py  assess.py  graduate.py  migrate.py  monitor.py  plan.py  remediate.py  validate.py
src/brownfield/core/: __init__.py  installer.py  validator.py
src/brownfield/git/: __init__.py  auto_revert.py  branch_guard.py  history_tracker.py  safe_commit.py
src/brownfield/graduation/: __init__.py  archival.py  constitution_generator.py  report_generator.py  templates_generator.py
src/brownfield/integration/: __init__.py
src/brownfield/integration/speckit/: __init__.py  compatibility_checker.py  constitution_generator.py  monitoring.py  workflow_enforcer.py
src/brownfield/integration/speckit/templates/: constitution.yaml.j2
src/brownfield/models/: __init__.py  assessment.py  checkpoint.py  decision.py  gate.py  orchestrator.py  report.py  state.py  workflow.py
src/brownfield/orchestrator/: __init__.py  approval_handler.py  assessment.py  checkpoint_manager.py  gate_validator.py  graduation.py  phase_machine.py  plan.py  remediation.py  validation.py
src/brownfield/orchestrator/utils/: __init__.py  display.py  plan_loader.py
src/brownfield/plugins/: __init__.py  base.py  go_handler.py  javascript_handler.py  python_handler.py  registry.py  rust_handler.py
src/brownfield/remediation/: quality.py  structure.py  structure_verifier.py  testing.py  validation.py
src/brownfield/state/: __init__.py  checkpoint_store.py  decision_logger.py  report_writer.py  state_store.py
src/brownfield/state/migrations/: __init__.py  migrate_state_v1.py
src/brownfield/utils/: __init__.py  cache.py  config.py  error_handler.py  file_operations.py  output_formatter.py  process_runner.py  profiler.py
templates/: brownfield-assessment-template.md  brownfield-config-template.yaml  brownfield-plan-template.md  brownfield-validation-template.md
templates/commands/: brownfield.assess.md  brownfield.graduate.md  brownfield.ingest.md  brownfield.plan.md  brownfield.remediate.md  brownfield.validate.md
templates/slash-commands/: brownfield.assess.md  brownfield.graduate.md  brownfield.quality.md  brownfield.resume.md  brownfield.status.md  brownfield.structure.md  brownfield.testing.md  brownfield.validate.md
tests/: README.md  conftest.py  test_assessment.py  test_checkpoint.py  test_cli.py  test_compatibility_checker.py  test_constitution_generator.py  test_exceptions.py  test_gate.py  test_metrics_collector.py  test_monitoring_integration.py  test_orchestrator.py  test_report.py  test_state.py  test_state_model.py  test_workflow.py  test_workflow_enforcer.py  test_workflow_models.py
tests/contract/: __init__.py  test_assessment_contract.py  test_checkpoint_contract.py  test_cli_contract.py  test_gate_contract.py  test_metrics_collector_contract.py  test_plugin_interface.py  test_report_contract.py  test_state_contract.py  test_workflow_contract.py
tests/integration/: __init__.py  test_assessment_workflow.py  test_checkpoint_recovery.py  test_constitution_workflow.py  test_full_workflow.py  test_migration_workflow.py  test_phase_transitions.py
tests/unit/models/: test_checkpoint.py
tests/unit/orchestrator/: test_phase_machine.py  test_remediation.py
tests/unit/state/: test_checkpoint_migration.py  test_migration.py
